<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#516DFF"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button8"
        android:layout_width="170dp"
        android:layout_height="158dp"
        android:drawableStart="@drawable/fsfas"
        android:drawableBottom="@drawable/_528474303176360636_1"
        android:text="@string/hhgf"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btnSteps"
        android:layout_width="371dp"
        android:layout_height="72dp"
        android:background="#E5E5E5"
        android:drawableStart="@drawable/rotate_left"
        android:onClick="onClick"
        android:text="@string/steps152"
        android:textAlignment="inherit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />

    <Button
        android:id="@+id/button4"
        android:layout_width="371dp"
        android:layout_height="72dp"
        android:background="#E5E5E5"
        android:drawableStart="@drawable/watch_later"
        android:text="@string/min30"
        android:textAlignment="inherit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.429" />

    <Button
        android:id="@+id/button3"
        android:layout_width="371dp"
        android:layout_height="72dp"
        android:background="#E5E5E5"
        android:drawableStart="@drawable/whatshot"
        android:text="@string/kcal59"
        android:textAlignment="inherit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="371dp"
        android:layout_height="72dp"
        android:background="#E5E5E5"
        android:drawableStart="@drawable/place"
        android:text="@string/km13"
        android:textAlignment="inherit"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/button"
        android:layout_width="371dp"
        android:layout_height="72dp"
        android:background="#A5B2F3"
        android:drawableStart="@drawable/devices_other"
        android:text="@string/smarts"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <Button
        android:id="@+id/button6"
        android:layout_width="170dp"
        android:layout_height="158dp"
        android:drawableStart="@drawable/ggds"
        android:drawableBottom="@drawable/scale_1200__1__1"
        android:text="@string/ggsaf"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>